package ar.edu.mercadoflux.app.core.domain;

public enum ProductCategory {
    TECHNOLOGY,
    FASHION,
    ELECTRICAL_APPLIANCE;
}
