package ar.edu.mercadogratis.app.model;

public enum PurchaseStatus {
    CONFIRMED
}
